FIX: Added a new filter to 'resumen_asistencias_diarias' to display the data correctly

--- a/frontend/templates/tabla_biometrico.html
+++ b/frontend/templates/tabla_biometrico.html
@@ -47,7 +47,7 @@
                         <td>{{ r.nombre }}</td>
                         <td>{{ r.cedula }}</td>
                         <td>{{ r.estacion }}</td>
-                        <td>
+                        <td class="col-dia">
                             {% if r.entrada %}
                                 {{ r.entrada|date:"Y-m-d H:i:s" }}
                             {% else %}
